<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IMap</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="searchWay">Directions</string>
    <string name="searchKey">Key</string>
    <string name="txtStart">First</string>
    <string name="txtFinish">Second</string>
    <string name="btnSearch">Find</string>
    <string name="btnCancel">Cancel</string>
    <string name="rdBicycle">Bicycle</string>
    <string name="rdDriving">Driving</string>
    <string name="rdWalker">Walker</string>
    <string name="rdBus">Bus</string>

</resources>