<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    tools:ignore="ObsoleteLayoutParam" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <AutoCompleteTextView
            android:id="@+id/txtStart"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableLeft="@android:drawable/ic_menu_myplaces"
            android:hint="@string/txtStart" />

        <ImageButton
            android:id="@+id/btnCurr2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_menu_mylocation" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <AutoCompleteTextView
            android:id="@+id/txtFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@android:drawable/ic_menu_myplaces"
            android:gravity="center"
            android:hint="@string/txtFinish" />

        <ImageButton
            android:id="@+id/btnCurr1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:drawable/ic_menu_mylocation" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/GroupRadius1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rdDriving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/rdDriving"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/rdWalker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/rdWalker"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/rdBus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/rdBus"
            android:textColor="@color/black" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSearch"
            style="@style/btnStyleBeige"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:text="@string/btnSearch" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/btnStyleBeige"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/btnCancel" />
    </LinearLayout>

</LinearLayout>

/*e da de dau rang o tren nay*/